# data-analysis

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  railway.toml  render.yaml  requirements.txt
analyzer/: chart_utils.py  classify.py  eda.py  sentiment.py  tcp_rfm.py  text_mining.py
data/: korean_stopwords.txt  sentiment_lexicon.json
docs/superpowers/plans/: 2026-03-18-review-analyzer.md
src/reviewapp/: __init__.py  __main__.py  app.py
src/reviewapp/analyzer/: chart_utils.py  classify.py  eda.py  sentiment.py  tcp_rfm.py  text_mining.py
src/reviewapp/data/: en_sentiment_lexicon.json  korean_stopwords.txt  sentiment_lexicon.json
src/reviewapp/static/js/: app.js
src/reviewapp/templates/: index.html
static/css/: style.css
static/js/: app.js
templates/: index.html
