[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-analysis"
version = "0.1.0"
description = "이커머스 데이터 자동 분석 도구"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "배움의 달인", email = "learn@example.com" }]
keywords = ["review", "analysis", "text-mining", "sentiment", "eda"]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.0",
    "python-multipart==0.0.9",
    "jinja2==3.1.4",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "plotly>=5.18",
    "wordcloud>=1.9",
    "scikit-learn>=1.3",
    "networkx>=3.1",
    "kiwipiepy>=0.18",
    "python-dotenv>=1.0",
    "gunicorn>=21.2",
    "httpx>=0.27",
    "kaleido>=0.2.1",
    "pymupdf>=1.23",
    "python-docx>=1.0",
    "python-pptx>=0.6",
    "nltk>=3.8",
    "jieba>=0.42",
    "fugashi>=1.3",
    "unidic-lite>=1.0",
]

[project.scripts]
data = "reviewapp.__main__:main"

[project.urls]
Homepage = "https://github.com/daniel8824-del/data-analysis"
Repository = "https://github.com/daniel8824-del/data-analysis"

[tool.hatch.build.targets.wheel]
packages = ["src/reviewapp"]

[tool.hatch.build.targets.sdist]
include = ["src/reviewapp"]
